logo y textos de mundo verde

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -54,7 +54,7 @@
     "arrivalGDLMainTextAirportTaxi5": ", and Ecofy. Tariffs are calculated based on your destination zone. This is the safest, most comfortable, and fastest form of transportation available from Guadalajara Airport.",
     "arrivalGDLHowToHeader": "How to get from Guadalajara Airport to your destination?",
     "arrivalGDLHowToText1": "Upon arrival at Guadalajara Airport, you'll find several transportation options. These include the fixed-route van service or shuttle offered by",
-    "arrivalGDLHowToText2": "Transporte Ejecutivo",
+    "arrivalGDLHowToText2": "Mundo Verde",
     "arrivalGDLHowToText3": ", the",
     "arrivalGDLHowToText4": "Route C98 electric public buses",
     "arrivalGDLHowToText5": "that take you to the",
