--- a/assets/translations/es.json
+++ b/assets/translations/es.json
@@ -54,7 +54,7 @@
     "arrivalGDLMainTextAirportTaxi5": "y Ecofy. Con tarifas calculadas de acuerdo con la zona de tu destino. Esta es la forma de transporte más segura, cómoda y rápida disponible desde el Aeropuerto de Guadalajara.",
     "arrivalGDLHowToHeader": "¿Cómo llegar del Aeropuerto de Guadalajara a tu destino?",
     "arrivalGDLHowToText1": "Al llegar al Aeropuerto de Guadalajara te encontrarás diferentes opciones de transportación. Como el servicio de camionetas de ruta fija o shuttle de",
-    "arrivalGDLHowToText2": "Transporte Ejecutivo",
+    "arrivalGDLHowToText2": "Mundo Verde",
     "arrivalGDLHowToText3": ", los",
     "arrivalGDLHowToText4": "autobuses públicos eléctricos Ruta C98",
     "arrivalGDLHowToText5": "que te llevan hasta la",
